--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "refund-api",
+  "name": "refund",
   "version": "1.0.0",
-  "description": "API de solicitação de reembolso",
-  "main": "src/server.ts",
+  "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
-  "author": "Ruan Santiago",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "@prisma/client": "^6.2.1",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "zod": "^3.24.1"
-  },
+  "description": "",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
@@ -29,5 +19,15 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.2.1",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "zod": "^3.24.1"
   }
 }
